<resources>
    <string name="app_name">TaskDemo</string>

    <string name="action_settings">Settings</string>
    <string name="action_manage">Manage Account</string>


    <string name="hello_world">Hello world!</string>

    <string name="hello">Sample Android Design Support Library App</string>

    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snacksbar">Snack bar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>
    <string name="product">Product</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="select_State">Select State</string>
    <string name="bagStore">Bag Store</string>
    <string name="price">Price</string>
    <string name="item_price">Price :</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="favroite">Favroite</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="edit">Edit Profile</string>
    <string name="description">Description</string>
    <string name="product_details">Product Details</string>
    <string name="title">ProductTitle</string>
    <string name="title_login">Login</string>
    <string name="title_mainTab">Main</string>
    <string name="title_Tab">Tab</string>
    <string name="title_Photo">Photo</string>
    <string name="title_Bookmark">Bookmark</string>
    <string name="title_ProductDetails">ProductDetails</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="phone_no">Phone no.</string>
    <string name="bio_char_limit">Up to 300 characters</string>

    <string name="address">Address</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="username_required">Username cannot be blank</string>
    <string name="password_required">Password cannot be blank</string>
    <string name="username_password_required">Username and Password cannot be blank</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="state_not_found">Sate not Found</string>
    <string name="city_not_found">City not Found</string>

    <string name="state_city_not_found">State and City not Found</string>
    <string name="successfull_login">You are successfully logged in</string>
    <string name="successfull_logout">You are successfully logged out</string>
    <string name="welcome_to_task_demo">Welcome to task demo Project</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="email_should_be_gmail">Email should be in gmail.com format</string>
    <string name="internet_connection_not_available">No Internet Connection available. Please check your connection.</string>
    <string name="token_cannot_be_empty">Token can not be Empty</string>
    <string name="password_requirement_not_met">Password requirement not met</string>

    <string name="setting">Setting</string>
    <string name="discover">Discover</string>
    <string name="profile_info">Personal Info</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="geo_map">Geo fencing</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="submit">Submit</string>
    <string name="user_detail">User Detail</string>
    <string name="expandable_list">Expandable List</string>
    <string name="product_category_details">Product Details</string>
    <string name="expandable_product">Expandable Product</string>
    <string name="blocked_list">Blocked List</string>
    <string name="custom_button">Custom Button</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="enter_the_number_to_generate_button">Enter the number to generate button</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="notification">Notification</string>
    <string name="google_map">Google Map</string>
    <string name="general_setting">General Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="moni">Moni</string>
    <string name="crud">CRUD</string>
    <string name="country_selection">Country Selection</string>
    <string name="country">Country</string>
    <string name="bottom_navigation">BottomNavigation</string>
    <string name="State">State</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="item_was_removed_from_list">Item was removed from the list.</string>
    <string name="new_course">New Course</string>
    <string name="confirm_exit_title">Exit App</string>
    <string name="confirm_exit_message">Are you sure you want to close this app?</string>
    <string name="user_name">Name :</string>
    <string name="user_address">Address :</string>
    <string name="user_bio">Bio :</string>
    <string name="user_email">Email :</string>
    <string name="user_phone_no">Phone no :</string>
    <string name="no">No</string>
    <string name="gateway_group">Gateway Group.</string>
    <string name="event_location">Event Location</string>
    <string name="you_are_at_location">You are at location</string>
    <string name="you_are_at_event_location">You are at the event location</string>
    <string name="you_are_to_far">You are too far!</string>
    <string name="you_are">You are</string>
    <string name="meter_away"> meters away from the event location.</string>
    <string name="unable_to_get_location">Unable to get location. Try again.</string>
    <string name="location_service_not_available">Location services not available."</string>
    <string name="settings">Settings</string>
    <string name="location_services_disabled">Location Services Disabled</string>
    <string name="check_location_pemrission">Location permission is required to check your location.</string>
    <string name="please_enable_location_services">Please enable location services to use this feature.</string>
    <string name="far_from_event"> meters away from the event location.</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to logout?</string>
    <string name="google_maps_key">AIzaSyCYjCFvy1LRjs5-ydWbn7t-T2iou4IDk-U</string>

    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="ok">Ok</string>

    <string name="permission_required">Permission Required</string>
    <string name="no_thank">No Thanks</string>
    <string name="permission_denied_message">Permission was denied and cannot be asked again. Please allow permission from app settings.</string>
    <string name="permission_required_message">This app needs storage permissions to function properly. Please grant all of them.</string>
    <string name="camera_permission_rationale">This app needs camera access to take photos.</string>
    <string name="storage_permission_rationale">This app needs storage access to save and load images.</string>
    <string name="select_background_image_message">Select Background Profile Image</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_media_permission_required">Manage Media Permission Required</string>
    <string name="manage_media_permission_message">Please allow access to manage media files to use this feature.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="camera_permission_denied">Camera permission denied. Please grant the permission to capture photos.</string>
    <string name="choose_an_option">Choose an Option</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="profile_created_successfully">Profile Created Successfully</string>


    <string name="enter_name_message">Please enter your name.</string>
    <string name="enter_email_message">Please enter your email.</string>
    <string name="enter_address_message">Please enter your address.</string>
    <string name="enter_phone_message">Please enter your phone number.</string>
    <string name="phone_number_length_message">Phone number should be 10 digits long.</string>
    <string name="enter_bio_message">Please enter your bio.</string>
    <string name="bio_length_exceeded_message">Bio length should not exceed 300 characters.</string>
    <string name="select_profile_image_message">Please select a profile image.</string>
    <string name="gallery_permission_denied">Gallery Permission Denied.</string>
    <string name="permissions_needed">permission needed.</string>
    <string name="go_to_setting">"Go to setting"</string>
    <string name="switch_to_change_image">"Switch to change image</string>
    <string name="switch_compact">"Switch Compact"</string>


    <string-array name="programming_languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>

</resources>