<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_login"
        android:title="@string/title_login" />
    <item
        android:id="@+id/navigation_mainTab"
        android:title="@string/title_mainTab" />
    <item
        android:id="@+id/navigation_productDetails"
        android:title="@string/title_ProductDetails" />

    <item
        android:id="@+id/navigation_discover"
        android:title="@string/discover"
        />
    <item
        android:id="@+id/navigation_photo"
        android:title="@string/title_Photo"
        />
    <item
        android:id="@+id/navigation_Bookmark"
        android:title="@string/title_Bookmark"
        />
    <item
        android:id="@+id/navigation_Setting"
        android:title="@string/setting"/>

    <item
        android:id="@+id/navigation_CountrySelection"
        android:title="@string/country_selection"/>

    <item
        android:id="@+id/navigation_bottom_navigation"
        android:title="@string/bottom_navigation"/>

    <item
        android:id="@+id/navigation_user_profile"
        android:title="@string/user_profile"/>
    <item
        android:id="@+id/navigation_user_detail"
        android:title="@string/user_detail"/>

    <item
        android:id="@+id/navigation_expandable_list"
        android:title="@string/expandable_list"/>
</menu>