<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:enabled="true"
        />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        android:enabled="true"
        />

    <item
        android:id="@+id/category"
        android:title="@string/category"
        android:enabled="true"
        android:icon="@drawable/ic_cart"/>

    <item
        android:id="@+id/fab"
        android:icon="@drawable/ic_fab"
        android:enabled="true"
        android:title="@string/favroite"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:enabled="true"
        android:title="@string/profile"
        />

</menu>