<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">
    <fragment
        android:id="@+id/navigation_productDetails"
        android:name="com.example.taskdemo.ui.tab.productDetails.ProductDetailFragment"
        android:label="@string/title_ProductDetails"
        tools:layout="@layout/fragment_product_detail" >

    </fragment>
    <fragment
    android:id="@+id/navigation_mainTab"
    android:name="com.example.taskdemo.ui.TabLayout.TabMainFragment"
    android:label="@string/title_mainTab"
    tools:layout="@layout/fragment_main_tab" >

</fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.taskdemo.ui.auth.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_Bookmark"
        android:name="com.example.taskdemo.ui.tab.bookmark.BookmarkFragment"
        android:label="@string/title_Bookmark"
        tools:layout="@layout/fragment_bookmark"/>
    <fragment
        android:id="@+id/navigation_photo"
        android:name="com.example.taskdemo.ui.tab.photo.PhotoFragment"
        android:label="@string/title_Photo"
        tools:layout="@layout/fragment_photo"/>

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.taskdemo.ui.tab.discover.DiscoverFragment"
        android:label="@string/discover"
        tools:layout="@layout/fragment_discover"
        >
    </fragment>

    <fragment
        android:id="@+id/navigation_Setting"
        android:name="com.example.taskdemo.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting"
        />
    <fragment
        android:id="@+id/navigation_CountrySelection"
        android:name="com.example.taskdemo.ui.countrySelection.CountrySelectionFragment"
        android:label="@string/country_selection"
        tools:layout="@layout/fragment_country_selection"
        />
<!--    <fragment-->
<!--        android:id="@+id/navigation_bottom_navigation"-->
<!--        android:name="com.example.taskdemo.ui.bottomNavigation.BottomNavigationFragment"-->
<!--        android:label="@string/bottom_navigation"-->
<!--        tools:layout="@layout/fragment_bottom_navigation"-->
<!--        />-->

</navigation>