<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/productTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/title_ProductDetails"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/nature" />

        <TextView
            android:id="@+id/productPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/price"
            android:textColor="@color/darkGreen"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/likeProductDetailsIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_unlike" />

            <ImageView
                android:id="@+id/bookmarkProductIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_bookmark" />
        </LinearLayout>


        <TextView
            android:id="@+id/productDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/description"
            android:textColor="@color/darkGreen"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
